--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,11 +1,11 @@
 [defaults]
 inventory = ./environments/stage/dynamic_inventory.py
-remote_user = appuser
-private_key_file = /home/appuser/.ssh/appuser
+remote_user = shma
+private_key_file = /home/shma/.ssh/shma
 host_key_checking = false
 retry_files_enable = false
 roles_path = ./roles
-vault_password_file = /home/appuser/.ansible/vault.key
+vault_password_file = /home/shma/.ansible/vault.key
 
 [diff]
 always = true
