--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -2,17 +2,22 @@
 - name: Deploy the application on App server
   hosts: app
   become: true
-  tags: deploy-app
   tasks:
 
     - name: Fetch the latest version of application code
       git:
         repo: 'https://github.com/express42/reddit.git'
-        dest: /home/shma/reddit
+        dest: /home/{{ deploy_user }}/reddit
         version: monolith
+      notify: restart puma
 
     - name: Bundle install
       bundler:
         state: present
-        chdir: /home/shma/reddit
+        chdir: /home/{{ deploy_user }}/reddit
+
+  handlers:
+   - name: restart puma
+     become: true
+     systemd: name=puma state=restarted
 
